# python_learn

./: .gitignore  Pipfile  README.md  pyproject.toml
Cook_bock/: book.ipynb
Cook_book/: book.ipynb  iter-demo.py  iter_reverse.py  some_file.txt
Cook_book/.ipynb_checkpoints/: book-checkpoint.ipynb
OpenAPI/: swagger.yaml
QA/: docker-compose.yml
QA/CH1/: test_one.py
QA/HW/lesson2/: hw1.py  test_hw_1.py  test_hw_2.py
QA/python_qa_pytest-master_lesson2/0_pytest_intro/: test_pytest_intro.py
QA/python_qa_pytest-master_lesson2/1_fixtures_start/: test_fixtures_example_start.py
docker/: docker-compose.yml
hw_12/: hw12.py
learn_fastapi/: apps.py  pyproject.toml  schemas.py
learn_fastapi/templates/: base.html  index.html
lesson_10/: pymongo_demo.py
lesson_10/docker/: docker-compose.yml
lesson_10/lesson_11/: mongo_engine_demo.py
lesson_11/: mongo_engine_demo.py
lesson_11/sqlalchemy/: demo_sqlalchemy.py  example.db
lesson_12/: asyncpg_demo.py  asyncpgsa_demo.py  from_existing.py  tortoise_demo.py
lesson_13/: api.py  db_helper.py  solver.py  test_db_helper.py  test_solver.py
lesson_14/: fsm.py  main.py  telegram_bot.py  webhook_bot.py
lesson_15/: lesson-numpy.ipynb
lesson_16/: countries_data.csv  lesson-pandas.ipynb
lesson_17/: base.py  find_faces.py  find_faces_video.py  img_np.py  track_object.py
lesson_18/: app.py  main.py
lesson_18/templates/: base.html
lesson_18/views/: product.py
lesson_20/: Dockerfile  loading_from_env_file.py  pyproject.toml
lesson_20/flask_env_demo/demo/: __init__.py
lesson_20/my_shop/: app.py
lesson_20/my_shop/templates/: base.html
lesson_20/my_shop/templates/order/: index.html
lesson_20/my_shop/templates/products/: detail.html
lesson_20/my_shop/views/: __init__.py
lesson_20/python_env/: app.py
lesson_21/: docker-compose.yml  pyproject.toml
lesson_21/migrations/versions/: 7fda615c3b75_create_model_product.py  86fd94d6a241_create_model_product.py
lesson_21/my-shop/: app.py  config.py  pyproject.toml
lesson_21/my-shop/models/: __init__.py
lesson_21/my-shop/templates/products/: detail.html  index.html
lesson_22/: db.sqlite3  docker-compose.yaml  manage.py  pyproject.toml  result.txt
lesson_22/animals/: models.py  tasks.py  views.py
lesson_22/animals/management/commands/: work.py
lesson_22/animals/templates/animals/: index.html
lesson_22/lesson_22/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
lesson_23/zoo/: db.sqlite3
lesson_24_fastapi/: demo_fastapi.py  demo_pydantic.py  pyproject.toml
lesson_25_web_scraping/: demo_bs4.py  my_spider.py
lesson_3/: hw3.py  lesson_3.py  utils.py
lesson_4/: __init__.py  hw4.py
lesson_4/train_class/: __init__.py  base.py  main.py
lesson_5/: metaclass.py
lesson_6/: animals.py  food.py  main.py  my_exception.py  zoo.py
lesson_6/lesson_8/: demo.ini
lesson_9/asyncio/: aiohttp_demo.py  async_demo.py  utils.py
lesson_9/lesson_10/: pg_demo.py  redis_demo.py
patterns/abstract_fabric/: abc_fabric.py  main.py
skill_testing/: file_2.txt  file_3.txt  file_4.txt  file_5.txt  level_one.py
(+19 files in other folders)
