[tool.poetry]
name = "lesson_py"
version = "0.1.0"
description = "Learning project"
authors = ["Hazzari <Dev.aleksan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
flask = "*"
python-dotenv = "*"
Flask-Migrate = "^2.6.0"
beautifulsoup4 = "^4.9.3"
Scrapy = "^2.4.1"
scrapy-scrapingbee = "^0.0.2"
scrapy-splash = "^0.7.2"
scrapy-selenium = "^0.0.7"
ipdb = "^0.13.7"
httpx = "^0.17.1"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
