[tool.poetry]
name = "my_site_portfolio"
version = "0.1.0"
description = ""
authors = ["Aleksan <Dev.aleksan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Jinja2 = "^2.11.3"
fastapi = "^0.63.0"
uvicorn = "^0.13.3"
aiofiles = "^0.6.0"
pydantic = "^1.7.3"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
