[tool.poetry]
name = "my-shop"
version = "0.1.0"
description = ""
authors = ["Suren Khorenyan <surenkhorenyan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
flask = "*"
python-dotenv = "*"
Flask-SQLAlchemy = "^2.4.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
