[tool.poetry]
name = "lesson_21"
version = "0.1.0"
description = ""
authors = ["Aleksan <Dev.aleksan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9.1"
SQLAlchemy = "^1.3.23"
Flask = "^1.1.2"
Flask-Migrate = "^2.6.0"
Flask-SQLAlchemy = "^2.4.4"
psycopg2 = "^2.8.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
